add sampling sink

--- a/config/odaslive/respeaker_4_mic_array.cfg
+++ b/config/odaslive/respeaker_4_mic_array.cfg
@@ -4,18 +4,18 @@ version = "2.1";
 
 # Raw
 
-raw: 
+raw:
 {
 
     fS = 16000;
     hopSize = 128;
     nBits = 32;
-    nChannels = 4; 
+    nChannels = 4;
 
     # Input with raw signal from microphones
     interface: {
         type = "soundcard";
-        card = 1;
+        card = 2;
         device = 0;
     }
 
@@ -34,15 +34,15 @@ mapping:
 
 general:
 {
-    
+
     epsilon = 1E-20;
 
-    size: 
+    size:
     {
-        hopSize = 128;
-        frameSize = 256;
+        hopSize = 512;
+        frameSize = 1024;
     };
-    
+
     samplerate:
     {
         mu = 16000;
@@ -56,34 +56,34 @@ general:
     };
 
     mics = (
-        
+
         # Microphone 1
-        { 
-            mu = ( -0.0405, +0.0000, +0.0000 ); 
+        {
+            mu = ( -0.0405, +0.0000, +0.0000 );
             sigma2 = ( +0.000, +0.000, +0.000, +0.000, +0.000, +0.000, +0.000, +0.000, +0.000 );
             direction = ( +0.000, +0.000, +1.000 );
             angle = ( 80.0, 90.0 );
         },
 
         # Microphone 2
-        { 
-            mu = ( +0.0000, +0.0405, +0.0000 ); 
+        {
+            mu = ( +0.0000, +0.0405, +0.0000 );
             sigma2 = ( +0.000, +0.000, +0.000, +0.000, +0.000, +0.000, +0.000, +0.000, +0.000 );
             direction = ( +0.000, +0.000, +1.000 );
             angle = ( 80.0, 90.0 );
         },
 
         # Microphone 3
-        { 
-            mu = ( +0.0405, +0.0000, +0.0000 ); 
+        {
+            mu = ( +0.0405, +0.0000, +0.0000 );
             sigma2 = ( +0.000, +0.000, +0.000, +0.000, +0.000, +0.000, +0.000, +0.000, +0.000 );
             direction = ( +0.000, +0.000, +1.000 );
             angle = ( 80.0, 90.0 );
         },
 
         # Microphone 4
-        { 
-            mu = ( +0.0000, -0.0405, +0.0000 ); 
+        {
+            mu = ( +0.0000, -0.0405, +0.0000 );
             sigma2 = ( +0.000, +0.000, +0.000, +0.000, +0.000, +0.000, +0.000, +0.000, +0.000 );
             direction = ( +0.000, +0.000, +1.000 );
             angle = ( 80.0, 90.0 );
@@ -103,7 +103,7 @@ general:
 
         }
 
-    );  
+    );
 
     nThetas = 181;
     gainMin = 0.25;
@@ -114,7 +114,7 @@ general:
 
 sne:
 {
-    
+
     b = 3;
     alphaS = 0.1;
     L = 150;
@@ -142,15 +142,28 @@ ssl:
         { level = 4; delta = -1; }
     );
 
+    samples: {
+        pots_min_energy = 0.3;
+
+        interface: {
+            #type = "blackhole";
+            #type = "socket"; ip = "192.168.178.59"; port = 9001;
+            type = "file";
+            path = "samples.h5";
+        }
+    }
+
     # Output to export potential sources
     potential: {
 
-        # format = "undefined";
+        #format = "undefined";
         format = "json";
 
         interface: {
-            # type = "blackhole";
-            type = "socket"; ip = "127.0.0.1"; port = 9001;
+            #type = "blackhole";
+            #type = "socket"; ip = "127.0.0.1"; port = 9001;
+            type = "socket"; ip = "192.168.178.59"; port = 9001;
+            #type = "socket"; ip = "192.168.178.59"; port = 5000;
         };
     };
 
@@ -159,7 +172,7 @@ ssl:
 # Sound Source Tracking
 
 sst:
-{  
+{
 
     # Mode is either "kalman" or "particle"
 
@@ -197,9 +210,9 @@ sst:
     kalman: {
 
         sigmaQ = 0.001;
-        
+
     };
-   
+
     # Parameters used by the particle filter only
 
     particle: {
@@ -223,12 +236,13 @@ sst:
     # Output to export tracked sources
     tracked: {
 
-        # format = "undefined";
-        format = "json";
+        format = "undefined";
+        # format = "json";
 
         interface: {
-            # type = "blackhole";
-            type = "socket"; ip = "127.0.0.1"; port = 9000;
+            type = "blackhole";
+            # type = "socket"; ip = "127.0.0.1"; port = 9000;
+            # type = "socket"; ip = "192.168.178.59"; port = 9000;
         };
 
     };
@@ -237,7 +251,7 @@ sst:
 
 sss:
 {
-    
+
     # Mode is either "dds", "dgss" or "dmvdr"
 
     mode_sep = "dds";
@@ -265,7 +279,7 @@ sss:
 
         alphaPmin = 0.07;
         eta = 0.5;
-        alphaZ = 0.8;        
+        alphaZ = 0.8;
         thetaWin = 0.3;
         alphaWin = 0.3;
         maxAbsenceProb = 0.9;
@@ -288,12 +302,13 @@ sss:
 
         fS = 44100;
         hopSize = 512;
-        nBits = 16;        
+        nBits = 16;
 
         interface: {
-            type = "file";
-            path = "separated.raw";
-        }        
+            #type = "file";
+            #path = "separated.raw";
+	    type = "blackhole";
+        }
 
     };
 
@@ -301,12 +316,13 @@ sss:
 
         fS = 44100;
         hopSize = 512;
-        nBits = 16;        
+        nBits = 16;
 
         interface: {
-            type = "file";
-            path = "postfiltered.raw";
-        }        
+            #type = "file";
+            #path = "postfiltered.raw";
+	        type = "blackhole";
+        }
 
     };
 
@@ -314,7 +330,7 @@ sss:
 
 classify:
 {
-    
+
     frameSize = 1024;
     winSize = 3;
     tauMin = 32;
@@ -323,7 +339,7 @@ classify:
     alpha = 0.3;
     gamma = 0.05;
     phiMin = 0.15;
-    r0 = 0.2;    
+    r0 = 0.2;
 
     category: {
 
@@ -332,6 +348,12 @@ classify:
         interface: {
             type = "blackhole";
         }
+
+	    //format = "json";
+
+        //interface: {
+        //    type = "socket"; ip = "192.168.178.59"; port = 5000;
+        //};
 
     }
 
