--- a/config/odaslive/respeaker_4_mic_array.cfg
+++ b/config/odaslive/respeaker_4_mic_array.cfg
@@ -39,8 +39,8 @@ general:
 
     size:
     {
-        hopSize = 512;
-        frameSize = 1024;
+        hopSize = 256;
+        frameSize = 512;
     };
 
     samplerate:
@@ -108,6 +108,15 @@ general:
     nThetas = 181;
     gainMin = 0.25;
 
+    hops: {
+        interface: {
+            #type = "blackhole";
+            type = "socket"; ip = "192.168.178.59"; port = 5000;
+            #type = "file";
+            #path = "samples.h5";
+        }
+    }
+
 };
 
 # Stationnary noise estimation
@@ -142,16 +151,15 @@ ssl:
         { level = 4; delta = -1; }
     );
 
-    samples: {
-        pots_min_energy = 0.3;
-
-        interface: {
-            #type = "blackhole";
-            #type = "socket"; ip = "192.168.178.59"; port = 9001;
-            type = "file";
-            path = "samples.h5";
-        }
-    }
+    #samples: {
+    #    pots_min_energy = 0.15;
+    #    interface: {
+    #        type = "blackhole";
+    #        #type = "socket"; ip = "192.168.178.59"; port = 9001;
+    #        #type = "file";
+    #        #path = "samples.h5";
+    #    }
+    #}
 
     # Output to export potential sources
     potential: {
@@ -162,8 +170,8 @@ ssl:
         interface: {
             #type = "blackhole";
             #type = "socket"; ip = "127.0.0.1"; port = 9001;
-            type = "socket"; ip = "192.168.178.59"; port = 9001;
-            #type = "socket"; ip = "192.168.178.59"; port = 5000;
+            #type = "socket"; ip = "192.168.178.59"; port = 9001;
+            type = "socket"; ip = "192.168.178.59"; port = 5001;
         };
     };
 
@@ -321,7 +329,7 @@ sss:
         interface: {
             #type = "file";
             #path = "postfiltered.raw";
-	        type = "blackhole";
+	    type = "blackhole";
         }
 
     };
@@ -343,17 +351,16 @@ classify:
 
     category: {
 
-        format = "undefined";
+        #format = "undefined";
 
+        #interface: {
+        #    type = "blackhole";
+        #}
+
+        format = "json";
         interface: {
-            type = "blackhole";
-        }
-
-	    //format = "json";
-
-        //interface: {
-        //    type = "socket"; ip = "192.168.178.59"; port = 5000;
-        //};
+            type = "socket"; ip = "192.168.178.59"; port = 5002;
+        };
 
     }
 
